# msg-pwd-msg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ts/msg/invw/PwMgr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libs/util/: libutil.c  libutil.h
app/src/main/java/com/ts/msg/invw/PwMgr/: AddActivity.java  CustomAdapter.java  MainActivity.java  MyDatabaseHelper.java  UpdateActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_add.xml  activity_main.xml  activity_update.xml  my_row.xml
app/src/main/res/menu/: my_menu.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/ts/msg/invw/PwMgr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
